Fix small layout issue

--- a/gerby/static/css/tag.css
+++ b/gerby/static/css/tag.css
@@ -273,7 +273,7 @@ li.custom-item::before {
   vertical-align: top;
 }
 
-li.custom-item p {
+li.custom-item > p {
   display: inline-block;
 }
 
